# docker-tinyows

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: changelog-config.yaml  dpkg-versions.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  ci.yaml  clean-dockerhub-tag.yaml  main.yaml  rebuild.yaml
acceptance_tests/: Dockerfile  conftest.py  docker-compose.yml  query.xml  test_wfs.py
acceptance_tests/config/db/: 20_create.sql
acceptance_tests/config/mapserver/: tinyows.xml
builder/: Dockerfile  build.sh
ci/: clean-dockerhub-tag  config.yaml  dpkg-versions.yaml  publish  requirements.txt
runtime/: docker-entrypoint
runtime/etc/apache2/conf-enabled/: tinyows.conf
server/: Dockerfile
server/runtime/: docker-entrypoint  docker-entrypoint.sh
server/runtime/etc/apache2/conf-enabled/: tinyows.conf
