[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[project]
classifiers = []
dynamic = ["dependencies", "version"]
name = "docker-tinyows"
description = "Docker image for TinyOWS"
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
